# Triggr

./: .gitignore  LICENCE.md  README.md  test.html
beta/: Cargo.toml
beta/src/: main.rs
console/: index.html  package-lock.json  package.json  tailwind.config.ts
console/docs/: ARCHITECTURE.md
console/src/: index.css
console/src/app/: App.tsx
console/src/components/: dsl-code-editor.css  dsl-code-editor.tsx  footer.tsx  logo.tsx  theme-toggle.tsx
demo/: Cargo.toml  chain.json
demo/src/: main.rs
examples/chain-whale-alert/: package-lock.json
examples/dash-merch-now/: README.md  index.html
examples/mint-sparkle-rank/: README.md  index.html  tailwind.config.ts
sdk/: README.md  api_test.html  package.json  test.html  tsconfig.json
sdk/src/: index.ts  main.ts
triggr/: Cargo.toml
triggr/.data/contracts/: 0xE4F02cAD85aD04964Ed94DF64BB86743dAC4dd8F.json  dafdaf.json
triggr/.data/metadata/: db  snap.00000000000000F3
triggr/.data/triggers/: db  snap.0000000000000B52  snap.00000000000019D5  snap.0000000000001CB7  snap.00000000000027F1  snap.000000000000433D
triggr/data/app/: db  snap.0000000000000118  snap.000000000000044B  snap.00000000000005D2  snap.0000000000000982  snap.0000000000000AD0
triggr/data/metadata/: db  snap.00000000000000F4  snap.00000000000001E3  snap.0000000000000307  snap.0000000000000352  snap.000000000000056D
triggr/data/projects/: db  snap.0000000000000255  snap.000000000000317A  snap.0000000000003289  snap.0000000000003E3D  snap.0000000000004064  snap.00000000000042C0  snap.00000000000046D8  snap.00000000000074E2
triggr/data/users/: db  snap.000000000000015C  snap.0000000000000233  snap.0000000000000331  snap.0000000000000536  snap.000000000000054A  snap.0000000000000734
triggr/sdk/src/: index.ts  main.ts
triggr/src/: dsl.rs  lib.rs  prelude.rs  storage.rs  util.rs
triggr/src/chain/: mod.rs
triggr/src/chain/polkadot/: decode.rs  mod.rs  prelude.rs  util.rs
triggr/src/server/: middleware.rs  mod.rs  routes.rs  startup.rs
triggr/src/server/handlers/: console.rs  db.rs  docs.rs  mod.rs  trigger.rs  ws.rs
ui/: README.md  index.html  package-lock.json  tailwind.config.ts
ui/src/: App.tsx  index.css
(+94 files in other folders)
