[package]
name = "triggr"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.83"
thiserror = "2.0.15"
hex = "0.4.3"
sled = "0.34.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
bincode = "1.3"
rand = "0.9.2"
axum = { version = "0.8.4", features = ["ws", "multipart"] }
tokio = { version = "1.47.1", features = ["full"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
anyhow = "1.0.100"
tracing = "0.1.41"
utoipa = { version = "5.4.0", features = ["macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[features]
tracing = []