[package]
name = "triggr"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.83"
thiserror = "2.0.15"
hex = "0.4.3"
sled = "0.34.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
rand = "0.9.2"
axum = { version = "0.8.4", features = ["ws", "multipart"] }
tokio = { version = "1.47.1", features = ["full"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
anyhow = "1.0.100"
tracing = "0.1.41"
utoipa = { version = "5.4.0", features = ["macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tower-http = { version="0.6.6", features = ["cors"] }
aes-gcm = "0.10.3"
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git", default-features = false, features = [
    "jsonrpsee-client",
] }
parity-scale-codec = "3.7.5"
scale-value = "0.18.1"
chrono = "0.4.42"
colored = "3.0.0"

[features]
tracing = []